<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">书写平台(手机版)</string>
    <drawable name="bkcolor">#DAA520</drawable>
    <drawable name="black">#000000</drawable>
    <string name="input">汉字输入</string>
    <string name="position">底范字位置</string>
    <string name="modify">书写修改</string>
    <string name="strokeSize">笔画大小</string>
    
    <string name="menu_settings">Settings</string>    
    <string name="startLearn">开始学习</string>   
    <string name="category_navigation">分类导航</string>
    <string name="choose_edition">选择教材</string>
    <string name="choose_grade">选择年级</string>
    <string name="choose_volume">选择册</string>
    <string name="start_practice">进入练习</string>
    <string name="search_navigation">检索导航</string>
    <string name="choose_keyWord">选择检索关键字:</string>
    <string name="autobiography">个性化定制</string>
    <string name="choose_practiceModule">选择练习模式:</string>
    <string name="choose_practiceMode">选择练习方式:</string>
    <string name="practiced">您已经练习到:</string>
    <string name="go_onPractice">继续练习</string>
    <string name="oripath">默认路径</string>
    
    <string name="stroke_practice">笔画练习</string>
    <string name="order_practice">笔顺练习</string>
    <string name="structure_practure">结构练习</string>
    <string name="wholeword_practice">整字练习</string>
    
    <string name="choose_otherEdition">选择其他教材</string>
    
    <string name="choose_myClass">选择课</string>
    
    <string name="miaohong">描红</string>
    <string name="diantishi">点提示</string>
    <string name="shanxian">闪现</string>
    <string name="tianchong">补全</string>
    <string name="duilin">对临</string>
    <string name="beilin">背临</string>
    
    <string name="history_result">历史成绩</string>
    <string name="stage_result">阶段成绩</string>
    <string name="com_assessment">综合评价</string>
    <string name="back_index">返回主菜单</string>
    
    <string name="is_exitApp">要退出程序吗？</string>
     <string name="is_submitResult">确认要提交结果吗？</string>
     
     
    <string name="input_info">填写注册信息</string>
    <string name="choose_school">学校</string>
    <string name="choose_grade2">年级</string>
    <string name="choose_class">班级</string>
    
    <string name="student_num">学号</string>
    <string name="name">姓名</string>
    <string name="gender">性别</string>
    <string name="login">登陆</string>
     <string name="choose_mode">模式</string>
    
    
    
    
    
    
   
    
    
    
    

</resources>