<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:background="@drawable/login5"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/navigationTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/input_info"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/schoolText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/choose_school"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/schoolSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="0dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/gradeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/choose_grade2"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/gradeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/classText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/choose_class"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/classSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp" />
        </LinearLayout>
        <!-- 添加选择模式start -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_chooseMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/choose_mode"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/sp_chooseMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp" />
        </LinearLayout>
        <!-- 添加选择模式end -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/student_num"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/stuNumEt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:ems="8"
                android:hint="请输入学号"
                android:inputType="number"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/stuNameEt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:ems="8"
                android:hint="请输入姓名"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/gender"
                android:textColor="#000000"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="男"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="女"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/blue3_btn"
            android:text="@string/login"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>